# my-mcp-servers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: claude-auto-review.yml
calendar/: calendar_server.py
cosmos/: cosmos.py
devops/: azure-devops.py
sound/: sound.py
weather/: weather.py
